--- a/index.html
+++ b/index.html
@@ -4,86 +4,29 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pending Payments</title>
-
-<!-- Modern Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-  body {
-    font-family: 'Inter', sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 20px;
-    color: #333;
-  }
-  h1 {
-    text-align: center;
-    color: #2d3436;
-  }
-  .container {
-    max-width: 900px;
-    margin: auto;
-    background: #fff;
-    padding: 25px;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
-  }
-  th, td {
-    border: 1px solid #e0e0e0;
-    padding: 10px;
-    text-align: left;
-  }
-  th {
-    background-color: #16a085;
-    color: white;
-  }
-  tr:nth-child(even) {
-    background-color: #f8f9fa;
-  }
-  tr:hover {
-    background-color: #ecf0f1;
-  }
-  .controls {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-bottom: 15px;
-  }
-  input, select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  button {
-    background-color: #16a085;
-    color: white;
-    border: none;
-    padding: 10px 18px;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  button:hover {
-    background-color: #138d75;
-  }
+  body {font-family:'Inter',sans-serif;background:#f4f6f8;margin:0;padding:20px;color:#333;}
+  h1{text-align:center;color:#2d3436;}
+  .container{max-width:900px;margin:auto;background:#fff;padding:25px;border-radius:10px;box-shadow:0 3px 10px rgba(0,0,0,0.1);}
+  table{width:100%;border-collapse:collapse;margin-top:15px;}
+  th,td{border:1px solid #e0e0e0;padding:10px;text-align:left;}
+  th{background:#16a085;color:white;}
+  tr:nth-child(even){background:#f8f9fa;}
+  tr:hover{background:#ecf0f1;}
+  input,select,button{padding:10px;border:1px solid #ccc;border-radius:6px;margin:4px 0;width:100%;}
+  button{background:#16a085;color:white;border:none;cursor:pointer;font-weight:600;}
+  button:hover{background:#138d75;}
 </style>
 </head>
 <body>
 
 <div class="container">
   <h1>📋 Pending Payments</h1>
-  <p style="text-align:center; color:gray;">Live from Google Sheet (via SheetDB)</p>
+  <p style="text-align:center;color:gray;">Live from Google Sheet (via SheetDB)</p>
 
-  <div class="controls">
-    <button onclick="fetchData()">🔄 Refresh Now</button>
-  </div>
+  <button onclick="fetchData()">🔄 Refresh Now</button>
 
   <table id="dataTable">
     <thead>
@@ -101,18 +44,18 @@
   </table>
 
   <hr style="margin:25px 0;">
-
   <h2>Add New Pending Client</h2>
+
   <form id="addForm">
-    <input type="text" id="client_name" placeholder="Client Name" required>
-    <input type="text" id="mobile" placeholder="Mobile" required>
-    <input type="number" id="amount" placeholder="Amount" required>
-    <input type="date" id="date" required>
+    <input id="clientname" placeholder="Client Name" required>
+    <input id="mobile" placeholder="Mobile" required>
+    <input id="amount" placeholder="Amount" required>
+    <input id="date" type="date" required>
     <select id="status">
-      <option value="pending" selected>Pending</option>
+      <option value="pending">Pending</option>
       <option value="paid">Paid</option>
     </select>
-    <input type="text" id="remark" placeholder="Remark">
+    <input id="remark" placeholder="Remark">
     <button type="submit">Add</button>
   </form>
 </div>
@@ -121,54 +64,6 @@
   const API_URL = 'https://sheetdb.io/api/v1/mowutpzt9mpqo';
 
   async function fetchData() {
-    const res = await fetch(API_URL);
-    const data = await res.json();
-
-    const tableBody = document.querySelector('#dataTable tbody');
-    tableBody.innerHTML = '';
-
-    data.forEach(row => {
-      const date = new Date(row.date);
-      const today = new Date();
-      const diff = Math.floor((today - date) / (1000 * 60 * 60 * 24));
-      const tr = `
-        <tr>
-          <td>${row.client_name || ''}</td>
-          <td>${row.mobile || ''}</td>
-          <td>${row.amount || ''}</td>
-          <td>${row.date || ''}</td>
-          <td>${row.status || ''}</td>
-          <td>${row.remark || ''}</td>
-          <td>${diff >= 0 ? diff : ''}</td>
-        </tr>`;
-      tableBody.insertAdjacentHTML('beforeend', tr);
-    });
-  }
-
-  document.getElementById('addForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-
-    const newEntry = {
-      client_name: document.getElementById('client_name').value.trim(),
-      mobile: document.getElementById('mobile').value.trim(),
-      amount: document.getElementById('amount').value.trim(),
-      date: document.getElementById('date').value.trim(),
-      status: document.getElementById('status').value.trim(),
-      remark: document.getElementById('remark').value.trim(),
-    };
-
-    await fetch(API_URL, {
-      method: 'POST',
-      headers: {'Content-Type': 'application/json'},
-      body: JSON.stringify({data: [newEntry]})
-    });
-
-    e.target.reset();
-    fetchData();
-  });
-
-  fetchData();
-</script>
-
-</body>
-</html>
+    try {
+      const res = await fetch(API_URL);
+      const data =
